[package]
name = "kdtree-iced"
version = "0.1.0"
edition = "2024"
default-run = "kdtree-iced"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[dependencies]
iced = { version = "0.13.1", features = ["canvas"] }
rand = "0.9.2"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs/katex-header.html" ]
